# project-chiral-qa-service

./: .gitignore  pyproject.toml
project_chiral_qa_service/: __init__.py  gpt.py
